# ipod-to-ipod

./: Makefile  Module  README  README.md  album.c  artist.c  connect.c  list_utils.c  podtopod.c  podtopod.h  song.c  transfer.c
libipod/: Makefile.in  aclocal.m4  configure
libipod/examples/: Makefile.am  Makefile.in
libipod/include/: Makefile.in
libipod/include/ipod/: Makefile.in  ipod.h
libipod/src/: Makefile.am  Makefile.in  ipod.c
patches/: iPL_2.4.32-ipod2_enable_scsi.patch  iPL_2.4.32-ipod2_use_page_alloc2.patch  mpdc.patch
